--- a/package.json
+++ b/package.json
@@ -5,6 +5,12 @@
   "author": "ShuXu<jinghongzhixian@126.com>",
   "license": "MIT",
   "private": true,
+  "keywords": ["Vue", "region", "selector"],
+  "browserslist": [
+    "> 1%",
+    "last 2 versions",
+    "not ie <= 8"
+  ],
   "scripts": {
     "dev": "cross-env NODE_ENV=development webpack-dev-server --open --hot",
     "build": "cross-env NODE_ENV=production webpack --progress --hide-modules"
@@ -12,11 +18,6 @@
   "dependencies": {
     "vue": "^2.5.11"
   },
-  "browserslist": [
-    "> 1%",
-    "last 2 versions",
-    "not ie <= 8"
-  ],
   "devDependencies": {
     "babel-core": "^6.26.0",
     "babel-loader": "^7.1.2",
