--- a/package.json
+++ b/package.json
@@ -16,12 +16,14 @@
     "not ie <= 8"
   ],
   "scripts": {
-    "serve": "cross-env NODE_ENV=development webpack serve",
+    "dev": "cross-env NODE_ENV=development webpack serve",
     "build": "cross-env NODE_ENV=production webpack --progress"
   },
   "dependencies": {
+    "axios": "^0.21.1",
     "element-ui": "^2.15.0",
-    "vue": "^2.6.12"
+    "vue": "^2.6.12",
+    "vuex": "^3.6.2"
   },
   "devDependencies": {
     "@babel/cli": "^7.12.13",
@@ -31,6 +33,7 @@
     "babel-loader": "^8.2.2",
     "babel-plugin-component": "^1.1.1",
     "babel-plugin-import": "^1.13.3",
+    "core-js": "^3.8.3",
     "cross-env": "^7.0.3",
     "css-loader": "^5.0.1",
     "file-loader": "^6.2.0",
