--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
-  "name": "saturnus_region_selector",
-  "description": "A region selector based on element UI",
-  "version": "1.0.2",
+  "name": "v_region_selector",
+  "description": "A region selector based on Vue2, Vuex and element UI",
+  "version": "0.0.1",
   "author": "ShuXu<jinghongzhixian@126.com>",
   "license": "MIT",
   "private": false,
@@ -15,7 +15,7 @@
     "last 2 versions",
     "not ie <= 8"
   ],
-  "main": "dist/v-origin-selector.js",
+  "main": "Lib/v_region_selector.js",
   "scripts": {
     "dev": "cross-env NODE_ENV=development webpack serve",
     "build": "cross-env NODE_ENV=production webpack --progress"
@@ -39,6 +39,7 @@
     "css-loader": "^5.0.1",
     "file-loader": "^6.2.0",
     "html-webpack-plugin": "^4.5.1",
+    "mini-css-extract-plugin": "^1.3.5",
     "node-sass": "^4.14.1",
     "sass-loader": "^10.1.1",
     "url-loader": "^4.1.1",
